# hyperparameter_optimization

./: README.md  pyproject.toml
src/: train.py
src/models/: cnn.py
src/utils/: config.py  datasets.py
